--- a/src/styles/all-events-page.scss
+++ b/src/styles/all-events-page.scss
@@ -2,7 +2,7 @@
   max-width: 800px;
 }
 
-.tutorials-for-date {
+.events-for-date {
   margin-top: 2rem;
   h2 {
     font-weight: bold;
@@ -24,4 +24,16 @@
   font-weight: bold;
   font-size: 0.8rem;
   margin-top: 0.3rem;
+}
+
+.event-duration {
+  background: gray;
+  color: white;
+  display: inline;
+  text-transform: uppercase;
+  font-size: 0.8rem;
+  font-weight: bold;
+  padding: 0.2rem 0.4rem;
+  border-radius: 0.2rem;
+  margin-right: 0.4rem;
 }
