--- a/src/styles/organizers-page.scss
+++ b/src/styles/organizers-page.scss
@@ -61,3 +61,14 @@ $photo-height: 100px;
   font-size: 0.8rem;
   margin-top: 0.3rem;
 }
+
+.subcommittee-link {
+  margin-left: 1.5rem;
+  font-size: 0.85rem;
+  text-transform: uppercase;
+  padding: 0.5rem;
+
+  &::before {
+    content: " » ";
+  }
+}
