--- a/src/styles/papers-page.scss
+++ b/src/styles/papers-page.scss
@@ -2,6 +2,9 @@
 @import "./mixins.scss";
 
 
+.papers-container {
+  max-width: $container-width;
+}
 
 h3.track-name {
   margin-top: 1rem;
@@ -16,6 +19,8 @@ h3.track-name {
 .single-paper-listing {
   margin-top: 0.4rem;
   margin-bottom: 0.4rem;
+  font-size: 0.9rem;
+  padding: 0.25rem;
 
   & .paper-authors {
     display: block;
@@ -27,8 +32,17 @@ h3.track-name {
     display: block;
     font-style: italic;
   }
+
+  min-width: 250px;
+  width: 25%;
 }
 
 .track-paper-listing {
-  width: 75%;
+  width: 100%;
+}
+
+.papers-in-track {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
