--- a/src/styles/all-events-page.scss
+++ b/src/styles/all-events-page.scss
@@ -37,3 +37,12 @@
   border-radius: 0.2rem;
   margin-right: 0.4rem;
 }
+
+.event-materials {
+  margin: 0.5rem;
+  a {
+    &::before {
+      content: " » ";
+    }
+  }
+}
