--- a/src/styles/all-events-page.scss
+++ b/src/styles/all-events-page.scss
@@ -46,3 +46,16 @@
     }
   }
 }
+
+.tutorial-author {
+  &-photo-gallery {
+    display: flex;
+    flex-direction: row;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
+  &-photo {
+    margin-right: 10px;
+  }
+}
