changed schedule link text to icon

--- a/src/styles/papers-page.scss
+++ b/src/styles/papers-page.scss
@@ -45,3 +45,8 @@ li.single-paper-wrapper {
     font-size: 1.3rem;
   }
 }
+
+.schedule-link {
+  padding-left: 0.3rem;
+  padding-right: 0.3rem;
+}
