added duration and show session long names where available

--- a/src/styles/schedule-page.scss
+++ b/src/styles/schedule-page.scss
@@ -11,6 +11,12 @@
     color: gray;
     font-size: 0.8rem;
   }
+
+  .duration {
+    margin-top: 0.5rem;
+    font-size: 0.8rem;
+    text-transform: uppercase;
+  }
 }
 
 .session {
