--- a/src/styles/schedule-page.scss
+++ b/src/styles/schedule-page.scss
@@ -47,3 +47,20 @@ ul.session-subsessions {
     padding: 5px;
   }
 }
+
+.timezone-chooser {
+  &-wrapper {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: flex-end;
+    margin-bottom: 0.5rem;
+  }
+
+  &-label {
+    text-transform: uppercase;
+    font-size: 0.8rem;
+    font-weight: bold;
+    margin-right: 1rem;
+  }
+}
