dynamically show paper counts instead of hardcoding

--- a/src/styles/papers-page.scss
+++ b/src/styles/papers-page.scss
@@ -50,3 +50,12 @@ li.single-paper-wrapper {
   padding-left: 0.3rem;
   padding-right: 0.3rem;
 }
+
+.paper-length-summary {
+  text-transform: lowercase;
+  font-weight: bold;
+}
+
+.summary {
+  margin-bottom: 1rem;
+}
