--- a/src/components/Navbar/styles.scss
+++ b/src/components/Navbar/styles.scss
@@ -1,5 +1,7 @@
 @import "../../styles/variables.scss";
 
+$secondary-nav-color: #4a4e6f;
+
 .navbar {
   background-color: $background-dark;
   // height: $navbar-height;
@@ -38,7 +40,7 @@
       color: $menu-active;
     }
 
-    &[aria-current="page"] {
+    &[aria-current="page"], &.selected {
       font-weight: 600;
       color: $menu-active;
     }
@@ -48,7 +50,6 @@
 
 .secondary {
   .navbar {
-    background-color: #4a4e6f;
+    background-color: $secondary-nav-color;
   }
-
 }
