--- a/src/styles/generic.scss
+++ b/src/styles/generic.scss
@@ -92,6 +92,11 @@ a {
   }
 }
 
+.ext-link-icon {
+  margin-left: 0.5rem;
+  font-size: 0.85rem;
+}
+
 .card {
   padding: 0.75rem 0.5rem;
   border: 1px solid lightgray;
