larger paragraph spacing on blog posts

--- a/src/styles/generic.scss
+++ b/src/styles/generic.scss
@@ -80,6 +80,11 @@ a {
     background-color: white;
     border: 1px solid lightgray;
   }
+  
+  p {
+    margin-top: 0.45rem;
+    margin-bottom: 0.45rem;
+  }
 }
 
 .blog-posts {
